fix topnav styles to be left aligned

--- a/app/assets/stylesheets/themes/ecoportal/main.scss
+++ b/app/assets/stylesheets/themes/ecoportal/main.scss
@@ -43,10 +43,12 @@ h4 {
 }
 
 .btn, input.link_button, a.link_button {
-  border: none;
   border-radius: 0;
 }
 
+a:focus {
+  outline: unset !important;
+}
 
 .team-card-content{
 
